cleanup, diary bugfix